--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
  <script type="text/javascript" src="static/js/config.js"></script>  
  <!-- Our JavaScript -->
   <script type="text/javascript" src="static/js/logic.js"></script>
+  <script type="text/javascript" src="static/js/map.js"></script>
 </body>
 </html>
