--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
   <script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
 
  <!-- API key -->
- <script type="text/javascript" src="static/js/config.js"></script>  
+ <script type="text/javascript" src="./config.js"></script>  
  <!-- Our JavaScript -->
   <script type="text/javascript" src="static/js/logic.js"></script>
-  <script type="text/javascript" src="static/js/map.js"></script>
+  <!-- <script type="text/javascript" src="static/js/map2.js"></script> -->
+
 </body>
 </html>
